FINALLY FIXED THE LIST TITLE OVERFLOWING fixes #7

--- a/public/main.css
+++ b/public/main.css
@@ -36,9 +36,11 @@ body{
     color: white;
     height: 100vh;
     min-width: 300px;
-    width: 20%;
+    width: 300px;
     background-color: #333333;
-    position: relative;
+    position: fixed;
+    left: 0;
+    top: 0;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;    
@@ -56,7 +58,7 @@ body{
 }
 .list{
     margin: 0px 0px 20px 0px;
-    overflow: hidden;
+    word-break: break-all;
 }
 .list-container{
     display: flex;
@@ -73,6 +75,7 @@ body{
     cursor: pointer;
     height: auto;
     overflow-wrap: break-word;
+    word-break: break-all;
 }
 .list-container-title:hover{
     background-color: #494949;
@@ -80,7 +83,6 @@ body{
 
 
 .deletebtn{
-    width: 20%;
     font-size: 1.3rem;
     color: white;
     border: none;
@@ -136,14 +138,16 @@ body{
 
 .main-container{
     height: 100vh;
-    width: 80%;
+    width: 100% !important;
+    margin-left: 300px;
     box-sizing: border-box;
     color: white;
     display: flex;
     flex-direction: column;
+    left: 0;
     justify-content: space-between;
-    position: relative;
-    padding: 20px 0px 20px 20px;
+    padding: 20px;
+    overflow-wrap: break-word;
 }
 .list-title{
     font-size: 1.5rem;
